--- a/Public/apply_muban.html
+++ b/Public/apply_muban.html
@@ -1,35 +1,25 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
  <link href="__PUBLIC__/assets/css/bootstrap.min.css" rel="stylesheet" />
- <link href="__PUBLIC__/assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="__PUBLIC__/css/style.css"/>
+        <link rel="stylesheet" href="__PUBLIC__/css/style.css"/>       
         <link href="__PUBLIC__/assets/css/codemirror.css" rel="stylesheet">
         <link rel="stylesheet" href="__PUBLIC__/assets/css/ace.min.css" />
         <link rel="stylesheet" href="__PUBLIC__/font/css/font-awesome.min.css" />
-
+        <!--[if lte IE 8]>
+          <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
+        <![endif]-->
         <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
+        <script src="__PUBLIC__/assets/layer/layer.js" type="text/javascript" ></script>
+        <script src="__PUBLIC__/assets/laydate/laydate.js" type="text/javascript"></script>  
         <script src="__PUBLIC__/assets/js/bootstrap.min.js"></script>
-        <script src="__PUBLIC__/assets/js/typeahead-bs2.min.js"></script>
+        <script src="__PUBLIC__/assets/js/typeahead-bs2.min.js"></script>              
         <script src="__PUBLIC__/assets/js/jquery.dataTables.min.js"></script>
         <script src="__PUBLIC__/assets/js/jquery.dataTables.bootstrap.js"></script>
-        <script src="__PUBLIC__/assets/layer/layer.js" type="text/javascript" ></script>
-        <script src="__PUBLIC__/js/H-ui.js" type="text/javascript"></script>
-        <script src="__PUBLIC__/js/displayPart.js" type="text/javascript"></script>
-        <script src="__PUBLIC__/assets/laydate/laydate.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="__PUBLIC__/css/style.css"/>
-        <link rel="stylesheet" href="__PUBLIC__/assets/css/ace.min.css" />
-        <link rel="stylesheet" href="__PUBLIC__/assets/css/font-awesome.min.css" />
-        <link href="__PUBLIC__/Widget/icheck/icheck.css" rel="stylesheet" type="text/css" />
-        <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
-        <script src="__PUBLIC__/assets/js/bootstrap.min.js"></script>
-            <!--时间空间的样式-->
-        <link rel="stylesheet" href="__PUBLIC__/css/date.css" />
-         <script src="__PUBLIC__/js/date.js"></script>
-<title>添加产品分类</title>
+                      
+
 </head>
