--- a/Public/header.html
+++ b/Public/header.html
@@ -1,47 +1,47 @@
-<!DOCTYPE>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>网站后台管理系统  </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="__PUBLIC__/assets/css/bootstrap.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="__PUBLIC__/assets/css/font-awesome.min.css" />
-	<!--[if IE 7]>
-	<link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
-	<![endif]-->
-	<link rel="stylesheet" href="__PUBLIC__/assets/css/ace.min.css" />
-	<link rel="stylesheet" href="__PUBLIC__/assets/css/ace-rtl.min.css" />
-	<link rel="stylesheet" href="__PUBLIC__/assets/css/ace-skins.min.css" />
-	<link rel="stylesheet" href="__PUBLIC__/css/style.css" />
-	<!--[if lte IE 8]>
-	<link rel="stylesheet" href="assets/css/ace-ie.min.css" />
+    <meta charset="utf-8" />
+    <title>网站后台管理系统  </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="__PUBLIC__/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="__PUBLIC__/assets/css/font-awesome.min.css" />
+    <!--[if IE 7]>
+    <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
+    <![endif]-->
+    <link rel="stylesheet" href="__PUBLIC__/assets/css/ace.min.css" />
+    <link rel="stylesheet" href="__PUBLIC__/assets/css/ace-rtl.min.css" />
+    <link rel="stylesheet" href="__PUBLIC__/assets/css/ace-skins.min.css" />
+    <link rel="stylesheet" href="__PUBLIC__/css/style.css" />
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
 
-	<![endif]-->
-	<script src="__PUBLIC__/assets/js/ace-extra.min.js"></script>
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
-	<!--[if !IE]> -->
-	<script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
-	<!-- <![endif]-->
-	<!--[if IE]>
-	<script type="text/javascript">window.jQuery || document.write("<script src='assets/js/jquery-1.10.2.min.js'>"+"<"+"script>");</script>
-	<![endif]-->
-	<script type="text/javascript">
-        if("ontouchend" in document) document.write("<script src='__PUBLIC__/assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
-	</script>
-	<script src="__PUBLIC__/assets/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC__/assets/js/typeahead-bs2.min.js"></script>
-	<!--[if lte IE 8]>
-	<script src="assets/js/excanvas.min.js"></script>
-	<![endif]-->
-	<script src="__PUBLIC__/assets/js/ace-elements.min.js"></script>
-	<script src="__PUBLIC__/assets/js/ace.min.js"></script>
-	<script src="__PUBLIC__/assets/layer/layer.js" type="text/javascript"></script>
-	<script src="__PUBLIC__/assets/laydate/laydate.js" type="text/javascript"></script>
-	<script src="__PUBLIC__/js/jquery.nicescroll.js" type="text/javascript"></script>
-	<script type="text/javascript">
+    <![endif]-->
+    <script src="__PUBLIC__/assets/js/ace-extra.min.js"></script>
+    <!--[if lt IE 9]>
+    <script src="assets/js/html5shiv.js"></script>
+    <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
+    <!--[if !IE]> -->
+    <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
+    <!-- <![endif]-->
+    <!--[if IE]>
+    <script type="text/javascript">window.jQuery || document.write("<script src='assets/js/jquery-1.10.2.min.js'>"+"<"+"script>");</script>
+    <![endif]-->
+    <script type="text/javascript">
+        if("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
+    </script>
+    <script src="__PUBLIC__/assets/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/assets/js/typeahead-bs2.min.js"></script>
+    <!--[if lte IE 8]>
+    <script src="assets/js/excanvas.min.js"></script>
+    <![endif]-->
+    <script src="__PUBLIC__/assets/js/ace-elements.min.js"></script>
+    <script src="__PUBLIC__/assets/js/ace.min.js"></script>
+    <script src="__PUBLIC__/assets/layer/layer.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/assets/laydate/laydate.js" type="text/javascript"></script>
+    <script src="__PUBLIC__/js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script type="text/javascript">
         $(function(){
             var cid = $('#nav_list> li>.submenu');
             cid.each(function(i){
@@ -96,6 +96,25 @@
             $('.link_cz > li').removeClass('active');
             $(this).addClass('active');
         });
+        /*******************/
+        //jQuery( document).ready(function(){
+        //    $("#submit").click(function(){
+        //  // var num=0;
+        //     var str="";
+        //     $("input[type$='password']").each(function(n){
+        //          if($(this).val()=="")
+        //          {
+        //              // num++;
+        //             layer.alert(str+=""+$(this).attr("name")+"不能为空！\r\n",{
+        //                title: '提示框',
+        //              icon:0,
+        //          });
+        //             // layer.msg(str+=""+$(this).attr("name")+"不能为空！\r\n");
+        //             layer.close(index);
+        //          }
+        //     });
+        //})
+        //  });
 
         /*********************点击事件*********************/
         $( document).ready(function(){
@@ -194,5 +213,5 @@
 
 
         }
-	</script>
+    </script>
 </head>
